test_scores/negative_dimers/features/P28066.pkl.xz
/g/alphafold/input_features/Homo_sapiens/features/P28066.pkl.xz